# adk-agents

./: .env.example  .env.example-advanced  .env.example-minimum  .gitignore  .indexignore  .pre-commit-config.yaml  .voidrules  AGENT.md  AGENTS.md  AGENT_PR_INSTRUCTION.md  BEST_PRACTICE.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  GEMINI.md  INPUT_PANE_GUIDE.md  NOTES.md  PLAN_AGENT_FEATURES.md  PLAN_FEATURES.md  PLAN_TEST_GROOM.md  PLAN_TOOL_FEATURES.md  PLAN_TUI_FEATURES.md  README.md  REFACTORING_SUMMARY.md  RELEASE.md  REPOSITORY_GROOMING_SUMMARY.md  RICH_PROMPT_TOOLKIT_COMPATIBILITY.md  TECH_STACK.md  eval.sh  eval_adk.sh  git_diff_head.txt  groom.sh  mcp.json  mcp.json.example  prompt.sh  prompt_adk.sh  push.sh  pyproject.toml  pytest.ini  run.sh  (+5 more)
.agent/: mcp.json  mcp.json.docker  mcp.json.example
.agent/sub-agents/: code_quality_agent.mcp.json  design_pattern_agent.mcp.json  devops_agent.mcp.json  test_debugging_agent.mcp.json  testing_agent.mcp.json
.github/workflows/: README.md  gemini-cli.yml  gemini-issue-automated-triage.yml  gemini-issue-scheduled-triage.yml  gemini-pr-review.yml  gh-pages.yml  nightly.yml  pr-workflow.yml  publish.yml  reusable-python-test-coverage.yml  test-coverage.yml  test-e2e.yml  trunk-workflow.yml
agents/: __init__.py
agents/devops/: .indexignore  AGENT_IMPROVEMENTS_SUMMARY.md  PRIORITY_1_FIXES.md  __init__.py  agent.py  config.py  devops_agent.py  prompts.py  telemetry.py  tracing.py
agents/software_engineer/: __init__.py  agent.py  config.py  enhanced_agent.py  prompt.py  prompt_v0.1.py  prompts.py
devops/: .indexignore  AGENT.md  PHASE2_VALIDATION_RESULTS.md  __init__.py  agent.py  config.py  devops_agent.py  prompt.py  prompts.py  pyproject.toml
devops/components/: planning_manager.py
devops/context_management/: __init__.py  context_manager.py  file_tracker.py  llm_injection.py
devops/docs/: AGENT_IDEAS.md  AGENT_ROBUSTNESS_IMPROVEMENTS.md  FEATURE_AGENT_INTERACTIVE_PLANNING.md  FEATURE_AGENT_LOOP_OPTIMIZATION.md  FEATURE_RAG.md  IMPLEMENTATION_STATUS.md  README.md  REFACTOR_CONTEXT_MANAGER_2_CONTEXT_STATE.md  TELEMETRY_README.md  TELEMETRY_SETUP_COMPLETE.md  TESTING.md
devops/rag_components/: indexing.py
devops/shared_libraries/: ui.py
devops/tools/: __init__.py  dynamic_discovery.py  file_summarizer_tool.py  filesystem.py  rag_tools.py  setup.py  shell_command.py
devops/utils/: __init__.py  ui.py
docs/: Gemfile  _config.yml  architecture.md  best-practices-uv.md  configuration.md  contributing.md  features.md  getting_started.md  index.md  usage.md
docs/_includes/: head_custom.html  mermaid.html
docs/_site/: architecture.html  contributing.html  features.html  index.html  sitemap.xml  usage.html
docs/agents/: README.md  consolidated-status.md  context-management-strategy.md  context-smart-filtering.md  implementation-status.md  observability-configuration.md  overview.md  per-sub-agent-mcp-configuration.md  phase2-implementation.md  robustness-improvements.md  telemetry-configuration.md  telemetry-setup-complete.md  testing.md
docs/cli/: INPUT_PANE_GUIDE.md  INTERRUPTIBLE_CLI.md  MARKDOWN_RENDERING.md  README.md  STYLES.md  TEXTUAL_CLI.md  WEB_INTERFACE_GUIDE.md
docs/scenarios/: swe_scenarios.md
docs/tests/: README.md  adk-evaluation-framework.md  integration-testing.md  performance-testing.md  test-patterns.md  troubleshooting.md
docs/usage/: codebase_understanding_rag.md  interactive_planning.md  token_optimization_callbacks.md
eval/: token_growth_evaluation.test.json
example_prompts/: README.md  get_k8s_user_apps.sh  interruptible_cli_demo.py  test_dynamic_discovery.md  test_gemini_thinking_feature.md  test_phase2_remaining_features.md  test_phase2_validation.md  test_planning_heuristics.md  test_prompt_engineering.md  textual_cli_demo.py  token_test_README.md  token_usage_tracking_test.md
example_prompts/archive/: test_phase2_validation.md
example_prompts/current/: comprehensive_regression_test_suite.md  test_context_diagnostics.md  test_dynamic_discovery.md  test_enhanced_cli.md
scripts/: README.md  analyze_token_usage.sh  eval.sh  extract_token_data.sh  fix_rate_limits.sh  groom.sh  mcp.sh  metrics_overview.py  metrics_status.py  prompt.sh  quick_token_test.sh  run_token_test.sh  telemetry_check.py  telemetry_dashboard.py  token_monitor.sh  tracing_overview.py  validate_smart_prioritization_simple.py  watch_tokens.sh
scripts/ci/: extract_version.sh  generate_coverage_markdown.py  run_e2e_tests.sh
scripts/execution/: agent  api.sh  eval.sh  eval_adk.sh  fix_rate_limits.sh  groom.sh  prompt.sh  prompt_adk.sh  run.sh  run_adk.sh  web.sh
scripts/monitoring/: metrics_overview.py  metrics_status.py  telemetry_check.py  telemetry_dashboard.py  tracing_overview.py
scripts/validation/: validate_smart_prioritization_simple.py  verify_mcp_loading.py  verify_mcp_separation.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  test_cli_basic.py
tests/fixtures/: __init__.py  test_helpers.py
tests/integration/: README.md  README_REAL_INTEGRATION_TESTS.md  README_RETRY_SYSTEM_TESTS.md  __init__.py  conftest.py  run_integration_tests.py  test_adk_evaluation_patterns.py  test_advanced_token_optimization_integration.py  test_agent_lifecycle.py  test_agent_loading_real.py  test_conftest_example.py  test_context_management_advanced.py  test_contextual_awareness_milestone_1_2.py  test_enhanced_agent_feature_parity.py  test_milestone_2_2_real_ux_workflow.py  test_milestone_2_3_end_to_end.py  test_performance_verification.py  test_proactive_error_detection_milestone_2_1.py  test_proactive_optimization_milestone_2_2.py  test_real_agent_contextual_behavior.py  test_retry_system_integration.py  test_single_agent_patterns.py  test_sub_agent_delegation.py  test_sub_agent_mcp_loading.py  test_swe_agent_callbacks.py  test_system_instruction_compliance.py  test_tool_orchestration_advanced.py  test_workflow_guidance_milestone_2_3.py  test_workflow_guidance_real_agent_behavior.py  test_workflow_integration.py
tests/shared/: helpers.py  mocks.py
tests/unit/: __init__.py  (+26 more)
(+270 files in other folders)
