[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata

name = "adk-agent"
description = "DevOps Agent v2 with RAG capabilities."
readme = "README.md"
requires-python = ">=3.9"
#license = { file = "LICENSE" }
authors = [{ name = "BlueCentre", email = "git@nocentre.net" }]
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  #"License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "chromadb~=1.0.8", # Using ~= for compatible releases with 1.0.x
  "google-genai~=1.19.0", # Migrated from google-generativeai
  "google-api-core>=2.19.0", # Updated for protobuf 5.x compatibility
  "protobuf>=5.0,<6.0", # Updated for OpenTelemetry compatibility
  "openai~=1.10.0",
  "tiktoken>=0.7.0,<0.8.0", # Compatible with openlit 1.33.x
  "openlit>=1.33.20", # LLM observability - using newer version
  "opentelemetry-api>=1.30.0,<2.0.0", # OpenTelemetry core - compatible with openlit
  "opentelemetry-sdk>=1.30.0,<2.0.0", # OpenTelemetry SDK - compatible with openlit
  "opentelemetry-exporter-otlp>=1.30.0,<2.0.0", # OTLP exporter for Grafana Cloud
  "psutil~=5.9.0", # System monitoring
  "rich~=13.0.0", # Console output (for local dashboard if needed)
  "prompt_toolkit~=3.0.0", # For enhanced command-line input
  "pexpect>=4.9.0",
  # "google-adk @ git+https://github.com/google/adk-python.git@main", # Added google-adk as a direct dependency
  "google-adk @ git+https://github.com/BlueCentre/adk-python.git@feat/rich-click", # Added google-adk as a direct dependency
]
dynamic = ["version"]

#[project.urls]
#homepage = "https://google.github.io/adk-docs/"
#repository = "https://github.com/google/adk-python"
#changelog = "https://github.com/google/adk-python/blob/main/CHANGELOG.md"
#documentation = "https://google.github.io/adk-docs/"

[project.scripts]
agent = "wrapper.adk.cli:main"
adk-agent = "google.adk.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[tool.uv.sources] # Removed this section
#google-adk = { git = "https://github.com/google/adk-python.git", rev = "main" }

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["wrapper*", "agents*"]
#exclude = ["example_prompts*", "scripts*", ".cache*", ".agent*"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=1.0.0",
]
