[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata

name = "adk-agent"
description = "DevOps Agent v2 with RAG capabilities."
readme = "README.md"
requires-python = ">=3.9"
#license = { file = "LICENSE" }
authors = [{ name = "BlueCentre", email = "git@nocentre.net" }]
classifiers = [
  "Typing :: Typed",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  #"License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "chromadb>=1.0.12", # Using newer version that might be compatible
  "google-genai~=1.19.0", # Migrated from google-generativeai
  "google-api-core>=2.19.0", # Updated for protobuf 5.x compatibility
  "protobuf>=5.0,<6.0", # Updated for OpenTelemetry compatibility
  "openai>=1.10.0", # Using latest stable version
  "openlit>=1.33.20", # Using latest stable version
  "opentelemetry-api>=1.30.0,<2.0.0", # OpenTelemetry core - compatible with openlit
  "opentelemetry-sdk>=1.30.0,<2.0.0", # OpenTelemetry SDK - compatible with openlit
  "opentelemetry-exporter-otlp>=1.30.0,<2.0.0", # OTLP exporter for Grafana Cloud
  "psutil~=5.9.0", # System monitoring
  "rich>=13.7.0,<14.0.0", # Console output (for local dashboard if needed) - updated for crewai compatibility
  "prompt_toolkit~=3.0.0", # For enhanced command-line input
  "pexpect>=4.9.0",
  # "google-adk @ git+https://github.com/google/adk-python.git@main", # Added google-adk as a direct dependency
  "google-adk @ git+https://github.com/BlueCentre/adk-python.git@feat/rich-click", # Added google-adk as a direct dependency
]
dynamic = ["version"]

#[project.urls]
#homepage = "https://google.github.io/adk-docs/"
#repository = "https://github.com/google/adk-python"
#changelog = "https://github.com/google/adk-python/blob/main/CHANGELOG.md"
#documentation = "https://google.github.io/adk-docs/"

[project.scripts]
agent = "wrapper.adk.cli:main"
adk-agent = "google.adk.cli:main"

[project.optional-dependencies]

dev = [
  # go/keep-sorted start
  "flit>=3.10.0",
  "isort>=6.0.0",
  "pyink>=24.10.0",
  "pylint>=2.6.0",
  "mypy>=1.15.0",
  # go/keep-sorted end
]

a2a = [
  # go/keep-sorted start
  # Temporarily disabled due to FastAPI version conflict with chromadb
  # "a2a-sdk>=0.2.7;python_version>='3.10'"
  # go/keep-sorted end
]

eval = [
  # go/keep-sorted start
  "google-cloud-aiplatform[evaluation]>=1.87.0",
  "pandas>=2.2.3",
  "tabulate>=0.9.0",
  # go/keep-sorted end
]

test = [
  # go/keep-sorted start
  "anthropic>=0.43.0",               # For anthropic model tests
  "langchain-community>=0.3.17",
  "langgraph>=0.2.60",               # For LangGraphAgent
  "litellm>=1.71.2",                 # For LiteLLM tests
  "llama-index-readers-file>=0.4.0", # For retrieval tests

  "pytest-asyncio>=0.25.0",
  "pytest-mock>=3.14.0",
  "pytest-xdist>=3.6.1",
  "pytest>=8.3.4",
  # go/keep-sorted end
]

docs = [
  "autodoc_pydantic",
  "furo",
  "myst-parser",
  "sphinx",
  "sphinx-autodoc-typehints",
  "sphinx-rtd-theme",
]

# Optional extensions
extensions = [
  "anthropic>=0.43.0",                    # For anthropic model support
  "beautifulsoup4>=3.2.2",                # For load_web_page tool.
  # "crewai[tools];python_version>='3.10'", # Temporarily disabled due to dependency conflicts
  "docker>=7.0.0",                        # For ContainerCodeExecutor
  "langgraph>=0.2.60",                    # For LangGraphAgent
  "litellm>=1.63.11",                     # For LiteLLM support
  "llama-index-readers-file>=0.4.0",      # For retrieval using LlamaIndex.
  "lxml>=5.3.0",                          # For load_web_page tool.
  "tiktoken>=0.7.0,<0.8.0",               # Using latest stable version
  "toolbox-core>=0.1.0",                  # For tools.toolbox_toolset.ToolboxToolset
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

#[tool.uv.sources] # Removed this section
#google-adk = { git = "https://github.com/google/adk-python.git", rev = "main" }

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["wrapper*", "agents*"]
#exclude = ["example_prompts*", "scripts*", ".cache*", ".agent*"]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=1.0.0",
]
